add tmux auto scroll with mouse on

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,5 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
+# Allow scrolling with trackpad/mouse automatically
+set -g mouse on
