adding resizing of panes using h,j,k,l

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,12 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Shortcut to show all tmux sessions
+bind -n M-j resize-pane -D
+bind -n M-k resize-pane -U
+bind -n M-h resize-pane -L
+bind -n M-l resize-pane -R
+
 # Remap split keys to |, -
 bind | split-window -h
 bind - split-window -v
