adding binding for copying from tmux buffer to clipboard using xclip

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,9 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Copy top tmux buffer to clipboard using xclip
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
+
 # Reload config
 bind r source-file ~/.tmux.conf
 
